name: zurihac2015
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: ivan.perez@keera.co.uk
homepage: http://github.com/ivanperez-keera/zurihac2015
synopsis: A game written during ZuriHac2015
category: Game
author: Ivan Perez and Artem Chirkin
data-files: data/*.png data/*.wav data/*.mp3 data/*.ttf
data-dir: ""
 
flag wiimote
    Description:  Enable Wiimote support with hcwiid
 
flag kinect
    Description:  Enable Kinect support (with freenect)
 
executable voldemort
    build-depends: base >=4.6 && <5, containers -any,
                   transformers >=0.3 && <0.5, mtl -any, MissingH -any,
                   Yampa >=0.9.6 && <0.11, SDL -any, SDL-image -any, SDL-mixer -any,
                   SDL-ttf -any, SDL-gfx -any, IfElse -any
     
    if flag(wiimote)
        buildable: True
        cpp-options: -Dwiimote
     
    if flag(kinect)
        buildable: True
        cpp-options: -Dkinect
     
    if flag(wiimote)
        build-depends: hcwiid -any
        buildable: True
     
    if flag(kinect)
        build-depends: freenect -any, vector -any
        buildable: True
    main-is: Main.hs
    buildable: True
    extra-libraries: SDL_image SDL_mixer
    hs-source-dirs: src/
    other-modules: Audio Constants Control.Extra.Monad Data.Extra.List
                   Data.Extra.Num Data.Extra.Ord Data.Extra.VectorSpace Data.Helpers
                   Data.IdentityList Display FRP.Extra.Yampa Game GameCollisions
                   GameState Graphics.UI.Extra.SDL Input Levels Objects ObjectSF
                   Physics.TwoDimensions.Collisions Physics.TwoDimensions.Dimensions
                   Physics.TwoDimensions.Physics Resources
    ghc-options: -Wall -threaded
 
 